fix: Use the correct color for dark mode accent text/links

--- a/client/src/css/app.sass
+++ b/client/src/css/app.sass
@@ -135,7 +135,7 @@ body.body--dark
     a[data-cy="submission_link"],
     .accent-dark-text,
     .text-accent
-        color: $accent-dark !important
+        color: $dark-accent-text !important
 
     .accent,
     .accent-dark,
